[gd_scene load_steps=16 format=2]

[ext_resource path="res://Reusable/Enemies/Flying/Drone.gd" type="Script" id=1]
[ext_resource path="res://Reusable/Enemies/Flying/Anim/Flying1.png" type="Texture" id=2]
[ext_resource path="res://Reusable/Enemies/Flying/Anim/Flying2.png" type="Texture" id=3]
[ext_resource path="res://Reusable/Enemies/Flying/Anim/Flying3.png" type="Texture" id=4]
[ext_resource path="res://Reusable/Enemies/Flying/Anim/Flying4.png" type="Texture" id=5]
[ext_resource path="res://Reusable/Enemies/Flying/Sheild.gd" type="Script" id=6]
[ext_resource path="res://Reusable/PlayerBullet/PlayerBullet.png" type="Texture" id=7]
[ext_resource path="res://Reusable/Effects/DamageFlash.tres" type="Animation" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8, 9.1 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 3.63669

[sub_resource type="Animation" id=4]

resource_name = "spin"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 179.0 ]
}

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 3.0
scale_random = 0.0
scale_curve = SubResource( 6 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Scale" ]

[node name="Drone" type="KinematicBody2D" groups=[
"Enemy",
]]

input_pickable = false
collision_layer = 4
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="2"]

scale = Vector2( 0.255162, 0.262236 )
rect = Rect2( -10, -10, 20, 20 )
pause_animations = true
freeze_bodies = true
pause_particles = true
pause_animated_sprites = true
process_parent = false
physics_process_parent = false

[node name="Shoot" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="origin" type="Position2D" parent="." index="4"]

[node name="Sheild" type="StaticBody2D" parent="." index="5" groups=[
"Enemy",
]]

editor/display_folded = true
rotation = 2.50375
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Sheild" index="0"]

position = Vector2( 0, -16 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite2" type="Sprite" parent="Sheild" index="1"]

position = Vector2( 0, 16 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sheild" index="2"]

position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sheild" index="3"]

position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="SheildAnim" type="AnimationPlayer" parent="Sheild" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/spin = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Trail" type="Particles2D" parent="Sheild" index="5"]

position = Vector2( 0, -16 )
emitting = true
amount = 8
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="Trail2" type="Particles2D" parent="Sheild" index="6"]

position = Vector2( 0, 16 )
emitting = true
amount = 8
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material" ]

[node name="Restore" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 8.0
one_shot = false
autostart = false

[node name="Effect" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/DamageFlash = ExtResource( 8 )
blend_times = [  ]

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]

[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]

[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]

[connection signal="timeout" from="Restore" to="." method="_on_Restore_timeout"]


